src/objects/Staffing_Assignment__c.object
<CustomObject>
    <description>Boothforce;This associates a Booth with a Shift Time and an assigned contact; This is use by Sarah Steck;</description>
    <fields>
        <fullName>Assigned_To_Division__c</fullName>
        <formula>Assigned__r.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Email__c</fullName>
        <formula>Assigned__r.Email</formula>
        <label>Assigned To - Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Assigned Manager during the event.</description>
        <inlineHelpText>This is the Assigned Manager during the event.</inlineHelpText>
        <label>Assigned To Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staffing_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Mobile__c</fullName>
        <formula>Assigned__r.MobilePhone</formula>
        <label>Assigned To - Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_FID__c</fullName>
        <formula>Assigned_To_Other__r.FID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Other - FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_Facility__c</fullName>
        <formula>Assigned_To_Other__r.Employer1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Other - Facility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_Home_Phone__c</fullName>
        <formula>Assigned_To_Other__r.HomePhone</formula>
        <label>Assigned To Other - Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_Mobile__c</fullName>
        <formula>Assigned_To_Other__r.MobilePhone</formula>
        <label>Assigned To Other - Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other_Phone__c</fullName>
        <formula>Assigned_To_Other__r.Phone</formula>
        <label>Assigned To Other - Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Members</inlineHelpText>
        <label>Assigned To Other</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Phone__c</fullName>
        <formula>Assigned__r.Phone</formula>
        <label>Assigned To - Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Title__c</fullName>
        <formula>Assigned__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_User_Id__c</fullName>
        <formula>Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User this Staffing Assignment is Assigned to</description>
        <inlineHelpText>The User this Staffing Assignment is Assigned to</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staffing_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Users_Manager__c</fullName>
        <formula>Assigned__r.Manager.FirstName&amp;&apos; &apos;&amp;Assigned__r.Manager.LastName</formula>
        <inlineHelpText>This is the Manager of the User in the Assigned To field</inlineHelpText>
        <label>Assigned to Users Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booth__c</fullName>
        <inlineHelpText>The Demo Booth or Exhibit</inlineHelpText>
        <label>Booth</label>
        <referenceTo>Booth__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Staffed_Non_UHW__c</fullName>
        <formula>IF(  Assigned_To_Other__c =null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Staffed Non-UHW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Staffed__c</fullName>
        <formula>IF( Assigned__c=null, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Assigned = 1, Else = 0</inlineHelpText>
        <label>Is Staffed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager_Id__c</fullName>
        <formula>Assigned__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Time__c</fullName>
        <inlineHelpText>The block of time required to staff this Booth</inlineHelpText>
        <label>Shift Time</label>
        <referenceTo>Shift_Time__c</referenceTo>
        <relationshipLabel>Staffing Assignments</relationshipLabel>
        <relationshipName>Staffing_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Staffing Assignment</label>
    <nameField>
        <displayFormat>StaffingAssignment-{0000000}</displayFormat>
        <label>Staffing Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staffing Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>